# video-capture-v1-public

./: .gitignore  Makefile.am  Makefile.orig  NOTES  README  autogen.sh  avi.h  avi_reader.c  avi_reader.h  avi_rw_iobuf.c  avi_rw_iobuf.h  avi_writer.c  avi_writer.h  avicap-line21-to-raw.sh  avicap-vbi-preserve-cut.sh  avicutter  avicutter.cpp  bitmapinfoheader.h  build  c4_riff_datamosh_assist  c4_riff_datamosh_assist.c  c4_riff_datamosh_assist2  c4_riff_datamosh_assist2.c  capture_v4l.cpp  cleantree  config.h  config.h.in  configure.in  datamosh-xcode.sh  eia608-decoder.c  eia608-decoder.h  eia608-demux.c  eia608-demux.h  eia608-font-8x14.c  eia608-font-8x14.h  eia608-gen-test-charset.pl  eia608-gen-test-colors.pl  eia608_decoder_test  eia608_decoder_test.c  extended-data-service-decoder.c  (+48 more)
firmware/: README
patches/: README  saa7134-video-dont-reset-tvnorm.patch
